Added the changes for Feature200

--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -2,9 +2,9 @@
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
-}
+} 
 
 <div class="text-center">
-    <h1 class="display-4">WebApp</h1>
+    <h1 class="display-4">WebApp Version 6 - Feature200 </h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
